STIMLSOFT REPORT TOOL

--- a/CI Platform/CI Platform/Views/User/editProfile.cshtml
+++ b/CI Platform/CI Platform/Views/User/editProfile.cshtml
@@ -128,7 +128,7 @@
                         <li>@Html.ActionLink("Export to Word", "ExportAsWord")</li>
                         <li>@Html.ActionLink("Export to PNG", "ExportAsPng")</li>
                     </ul>
-                    <h3>Preview Profile Data</h3>
+                    <p>Preview Profile Data</>
                 </div>
                 @*</div>*@
 
