Data was successfully retrieved using SP.

--- a/CI Platform/CI Platform/Views/User/Index.cshtml
+++ b/CI Platform/CI Platform/Views/User/Index.cshtml
@@ -180,6 +180,12 @@
                                 account
                             </a>
                         </p>
+                        <p class="mt-2">
+                            <a asp-controller="User" asp-action="UsersData" 
+                            style="text-decoration: none">
+                            UserData
+                            </a>
+                        </p>
                     </div>
                 </form>
                 @section Scipts{
