Programmable Search Engine in .net mvc using GoogleAPI SearchEngineId

--- a/CI Platform/CI Platform/Views/User/Index.cshtml
+++ b/CI Platform/CI Platform/Views/User/Index.cshtml
@@ -186,6 +186,13 @@
                             UserData
                             </a>
                         </p>
+                        
+                        <p class="mt-2">
+                            <a asp-controller="Search" asp-action="CustomGoogle" 
+                            style="text-decoration: none">
+                            Custom Google Page
+                            </a>
+                        </p>
                     </div>
                 </form>
                 @section Scipts{
